spacing fix

--- a/_sass/global/_colors.scss
+++ b/_sass/global/_colors.scss
@@ -46,7 +46,8 @@
 .c--border-inverse { border-color: var(--c--theme-bg); }
 .c--border-medium { border-color: var(--c--theme-gray-04); }
 .c--border-light { border-color: var(--c--theme-gray-05); }
-.b--top { border-top-width: 1px; border-top-style: solid;}
+.b--top { border-top-width: 1px; border-top-style: solid; }
+.b--bottom { border-bottom-width: 1px; border-bottom-style: solid; }
 
 // Background
 #about body {
